--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,15 +17,18 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
+  font_awesome_flutter: ^9.2.0
   freezed: ^1.1.1
   hive: ^2.0.6
   hive_flutter: ^1.1.0
+  json_annotation: ^4.4.0
 
 dev_dependencies:
   build_runner: ^2.1.7
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
+  json_serializable: ^6.1.4
 
 flutter:
   uses-material-design: true
