--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cached_network_image: ^3.2.0
   cloud_firestore: ^3.1.10
   cupertino_icons: ^1.0.2
+  firebase_analytics: ^9.1.2
   firebase_auth: ^3.3.9
   firebase_core: ^1.13.1
   flutter:
